--- a/css/profiltekst.css
+++ b/css/profiltekst.css
@@ -106,6 +106,7 @@ ul {
   height: 95%;
   width: 10%;
   display: flex;
+  display: -webkit-flex;
   align-items: center;
   justify-content: center;
   color: #666;
@@ -170,6 +171,7 @@ ul {
 }
 .tab-menu ul {
   display: flex;
+  display: -webkit-flex;
   border-bottom: 2px solid #7fab1c;
   padding-left: 1px;
 }
