cursive font fix

--- a/css/profiltekst.css
+++ b/css/profiltekst.css
@@ -537,7 +537,7 @@ ul {
   background: url(../imgs/197.jpg);
   font-size: 160%;
   letter-spacing: 1px;
-  font-family: cursive;
+  font-family: 'Edwardian Script ITC', cursive;
   color: white;
   height: 300px;
 }
